--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: ['25.3.2', '26.2.1']
+        otp: ['25.3.2', '26.2.1', '27.0']
         elixir: ['1.15.2', '1.16.0']
 
     steps:
