--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: ['25.3.2', '26.2.1', '27.0']
-        elixir: ['1.15.2', '1.16.0']
+        include:
+          - elixir: 1.15.2
+            otp: 25.3.2
+
+          - elixir: 1.16.0
+            otp: 26.2.1
+
+          - elixir: 1.17.0
+            otp: 27.0
 
     steps:
     - uses: actions/checkout@v3
