--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,10 @@ jobs:
             otp: 26.2.1
 
           - elixir: 1.17.0
-            otp: 27.0
+            otp: 27.3
+
+          - elixir: 1.18.3
+            otp: 27.3
 
     steps:
     - uses: actions/checkout@v3
